# Platformer

./: .gitignore
Project/Project/: CMakeLists.txt  Game.cpp  Game.h  GlobalConstants.h  Player.cpp  Player.h  Window.cpp  Window.h  main.cpp
Project/Project/nix/: shell.nix
